// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileChart snapshot (Step 7 oracle) > clipped-domain bar chart (data outside scale.domain filtered) 1`] = `
{
  "a11y": {
    "altText": "Bar chart showing Clipped Values (5 data points)",
    "dataTableFallback": [
      [
        "value",
        "name",
      ],
      [
        10,
        "A",
      ],
      [
        25,
        "B",
      ],
      [
        40,
        "C",
      ],
      [
        75,
        "D",
      ],
      [
        90,
        "E",
      ],
    ],
    "keyboardNavigable": true,
    "role": "img",
  },
  "animation": undefined,
  "annotations": [],
  "area": {
    "height": 296.1,
    "width": 540.058,
    "x": 36.942,
    "y": 60.9,
  },
  "axes": {
    "x": {
      "domainLine": undefined,
      "end": {
        "x": 577,
        "y": 357,
      },
      "extent": 26,
      "gridlines": [],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 500,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 36.942,
        "y": 357,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": undefined,
      "tickPosition": "gutter",
      "ticks": [
        {
          "label": "0",
          "position": 36.942,
          "value": 0,
        },
        {
          "label": "20",
          "position": 252.9652,
          "value": 20,
        },
        {
          "label": "40",
          "position": 468.9884,
          "value": 40,
        },
      ],
      "titlePadding": undefined,
    },
    "y": {
      "domainLine": undefined,
      "end": {
        "x": 36.942,
        "y": 357,
      },
      "gridlines": [
        {
          "major": true,
          "position": 300.05769230769226,
        },
        {
          "major": true,
          "position": 208.95000000000002,
        },
        {
          "major": true,
          "position": 117.84230769230768,
        },
      ],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 500,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 36.942,
        "y": 60.9,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": undefined,
      "tickPosition": "gutter",
      "ticks": [
        {
          "label": "A",
          "position": 300.05769230769226,
          "value": "A",
        },
        {
          "label": "B",
          "position": 208.95000000000002,
          "value": "B",
        },
        {
          "label": "C",
          "position": 117.84230769230768,
          "value": "C",
        },
      ],
      "titlePadding": undefined,
    },
  },
  "chrome": {
    "bottomAnchorY": 383,
    "bottomHeight": 0,
    "title": {
      "maxWidth": 561,
      "style": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 26,
        "fontWeight": 600,
        "lineHeight": 1.15,
        "textAnchor": "start",
      },
      "text": "Clipped Values",
      "x": 17,
      "y": 17,
    },
    "topHeight": 37.9,
  },
  "crosshair": false,
  "dimensions": {
    "height": 400,
    "width": 600,
  },
  "display": "full",
  "legend": {
    "bounds": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "entries": [],
    "entryGap": 16,
    "labelStyle": {
      "fill": "#09090b",
      "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "fontSize": 11,
      "fontWeight": 400,
      "lineHeight": 1.3,
    },
    "position": "top",
    "swatchChipFill": "rgba(0,0,0,0.04)",
    "swatchGap": 6,
    "swatchSize": 12,
    "type": "categorical",
  },
  "legends": [
    {
      "bounds": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "entries": [],
      "entryGap": 16,
      "labelStyle": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.3,
      },
      "position": "top",
      "swatchChipFill": "rgba(0,0,0,0.04)",
      "swatchGap": 6,
      "swatchSize": 12,
      "type": "categorical",
    },
  ],
  "marks": [
    {
      "aria": {
        "label": "A: 10",
      },
      "cornerRadius": 2,
      "cornerRadiusSides": {
        "bl": false,
        "br": true,
        "tl": false,
        "tr": true,
      },
      "data": {
        "name": "A",
        "value": 10,
      },
      "fill": "#51bccc",
      "height": 68.33076923076923,
      "key": "|A",
      "label": {
        "connector": undefined,
        "halo": false,
        "style": {
          "dominantBaseline": "central",
          "fill": "#111111",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 11,
          "fontVariant": "tabular-nums",
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "end",
        },
        "text": "10",
        "visible": true,
        "x": 138.9536,
        "y": 300.05769230769226,
      },
      "orient": "horizontal",
      "type": "rect",
      "width": 108.01159999999999,
      "x": 36.942,
      "y": 265.89230769230767,
    },
    {
      "aria": {
        "label": "B: 25",
      },
      "cornerRadius": 2,
      "cornerRadiusSides": {
        "bl": false,
        "br": true,
        "tl": false,
        "tr": true,
      },
      "data": {
        "name": "B",
        "value": 25,
      },
      "fill": "#51bccc",
      "height": 68.33076923076923,
      "key": "|B",
      "label": {
        "connector": undefined,
        "halo": false,
        "style": {
          "dominantBaseline": "central",
          "fill": "#111111",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 11,
          "fontVariant": "tabular-nums",
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "end",
        },
        "text": "25",
        "visible": true,
        "x": 300.971,
        "y": 208.95000000000002,
      },
      "orient": "horizontal",
      "type": "rect",
      "width": 270.029,
      "x": 36.942,
      "y": 174.7846153846154,
    },
    {
      "aria": {
        "label": "C: 40",
      },
      "cornerRadius": 2,
      "cornerRadiusSides": {
        "bl": false,
        "br": true,
        "tl": false,
        "tr": true,
      },
      "data": {
        "name": "C",
        "value": 40,
      },
      "fill": "#51bccc",
      "height": 68.33076923076923,
      "key": "|C",
      "label": {
        "connector": undefined,
        "halo": false,
        "style": {
          "dominantBaseline": "central",
          "fill": "#111111",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 11,
          "fontVariant": "tabular-nums",
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "end",
        },
        "text": "40",
        "visible": true,
        "x": 462.9884,
        "y": 117.84230769230768,
      },
      "orient": "horizontal",
      "type": "rect",
      "width": 432.0464,
      "x": 36.942,
      "y": 83.67692307692306,
    },
  ],
  "metrics": undefined,
  "theme": {
    "_tokenPairs": undefined,
    "borderRadius": 8,
    "chrome": {
      "byline": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "eyebrow": {
        "color": "#06b6d4",
        "fontSize": 11,
        "fontWeight": 500,
        "lineHeight": 1.4,
      },
      "footer": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "source": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "subtitle": {
        "color": "#71717a",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "title": {
        "color": "#09090b",
        "fontSize": 26,
        "fontWeight": 600,
        "lineHeight": 1.15,
      },
    },
    "colors": {
      "annotationFill": "rgba(0,0,0,0.04)",
      "annotationText": "#71717a",
      "axis": "#71717a",
      "background": "transparent",
      "categorical": [
        "#06b6d4",
        "#e29e47",
        "#4170cb",
        "#b2417f",
        "#3ca368",
        "#a584dc",
      ],
      "categoricalFill": [
        "#51bccc",
        "#dda96b",
        "#587fc8",
        "#bf6291",
        "#62ab7d",
        "#ae96da",
      ],
      "diverging": {
        "brownTeal": [
          "#8c510a",
          "#bf812d",
          "#dfc27d",
          "#f6e8c3",
          "#80cdc1",
          "#35978f",
          "#01665e",
        ],
        "redBlue": [
          "#b2182b",
          "#d6604d",
          "#f4a582",
          "#f7f7f7",
          "#92c5de",
          "#4393c3",
          "#2166ac",
        ],
      },
      "gridline": "rgba(0,0,0,0.08)",
      "hairline": "rgba(0,0,0,0.14)",
      "negative": "#dc2626",
      "neutral": {
        "100": "#f0f0f0",
        "200": "#e1e1e2",
        "300": "#c9c9c9",
        "400": "#9d9d9d",
        "600": "#787879",
        "800": "#474748",
        "border": "rgba(0, 0, 0, 0.08)",
        "faint": "#d4d4d8",
        "secondary": "#3f3f46",
        "surface": "#ffffff",
      },
      "positive": "#15803d",
      "sequential": {
        "blue": [
          "#deebf7",
          "#c6dbef",
          "#9ecae1",
          "#6baed6",
          "#3182bd",
          "#08519c",
        ],
        "green": [
          "#e5f5e0",
          "#c7e9c0",
          "#a1d99b",
          "#74c476",
          "#31a354",
          "#006d2c",
        ],
        "orange": [
          "#fee6ce",
          "#fdd0a2",
          "#fdae6b",
          "#fd8d3c",
          "#e6550d",
          "#a63603",
        ],
        "purple": [
          "#efedf5",
          "#dadaeb",
          "#bcbddc",
          "#9e9ac8",
          "#756bb1",
          "#54278f",
        ],
        "teal": [
          "#06b6d4",
          "#05a3be",
          "#0490a8",
          "#037d92",
          "#026a7c",
          "#015766",
          "#004450",
        ],
      },
      "text": "#09090b",
    },
    "fonts": {
      "family": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "mono": ""JetBrains Mono", "Fira Code", "Cascadia Code", monospace",
      "sizes": {
        "axisTick": 11,
        "body": 13,
        "metricLabel": 11,
        "metricValue": 22,
        "small": 11,
        "subtitle": 14,
        "title": 26,
      },
      "weights": {
        "bold": 700,
        "medium": 500,
        "normal": 400,
        "semibold": 600,
      },
    },
    "isDark": false,
    "rule": null,
    "seriesStrategy": "palette",
    "spacing": {
      "axisMargin": 6,
      "chartToFooter": 8,
      "chromeGap": 6,
      "chromeToChart": 8,
      "padding": 20,
      "xAxisHeight": 26,
      "xAxisLabelPadding": 4,
    },
  },
  "tooltipDescriptors": [
    [
      "rect-0",
      {
        "fields": [
          {
            "label": "value",
            "value": "10",
          },
        ],
        "title": "A",
      },
    ],
    [
      "rect-1",
      {
        "fields": [
          {
            "label": "value",
            "value": "25",
          },
        ],
        "title": "B",
      },
    ],
    [
      "rect-2",
      {
        "fields": [
          {
            "label": "value",
            "value": "40",
          },
        ],
        "title": "C",
      },
    ],
  ],
  "watermark": false,
  "xInvert": {
    "bottomData": 50,
    "bottomPixel": 577,
    "scaleType": "linear",
    "topData": 0,
    "topPixel": 36.942,
  },
  "yInvert": {
    "bottomData": 0,
    "bottomPixel": 60.9,
    "domain": [
      "A",
      "B",
      "C",
    ],
    "positions": [
      300.05769230769226,
      208.95000000000002,
      117.84230769230768,
    ],
    "topData": 0,
    "topPixel": 357,
  },
}
`;

exports[`compileChart snapshot (Step 7 oracle) > legend-heavy multi-series line chart 1`] = `
{
  "a11y": {
    "altText": "Line chart showing GDP Growth from 2020 to 2021 with 4 series (US, UK, FR, DE) (8 data points)",
    "dataTableFallback": [
      [
        "date",
        "value",
        "country",
      ],
      [
        "2020-01-01",
        10,
        "US",
      ],
      [
        "2021-01-01",
        40,
        "US",
      ],
      [
        "2020-01-01",
        15,
        "UK",
      ],
      [
        "2021-01-01",
        35,
        "UK",
      ],
      [
        "2020-01-01",
        8,
        "FR",
      ],
      [
        "2021-01-01",
        22,
        "FR",
      ],
      [
        "2020-01-01",
        12,
        "DE",
      ],
      [
        "2021-01-01",
        28,
        "DE",
      ],
    ],
    "keyboardNavigable": true,
    "role": "img",
  },
  "animation": undefined,
  "annotations": [],
  "area": {
    "height": 263.4,
    "width": 683.04015,
    "x": 26,
    "y": 147.2,
  },
  "axes": {
    "x": undefined,
    "y": {
      "domainLine": false,
      "end": {
        "x": 26,
        "y": 410.59999999999997,
      },
      "gridlines": [
        {
          "major": true,
          "position": 394.13749999999993,
        },
        {
          "major": true,
          "position": 352.98125,
        },
        {
          "major": true,
          "position": 311.825,
        },
        {
          "major": true,
          "position": 270.66874999999993,
        },
        {
          "major": true,
          "position": 229.5125,
        },
        {
          "major": true,
          "position": 188.35625,
        },
        {
          "major": true,
          "position": 147.2,
        },
      ],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 500,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 26,
        "y": 147.2,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": false,
      "tickPosition": "inline",
      "ticks": [
        {
          "label": "10",
          "position": 394.13749999999993,
          "value": 10,
        },
        {
          "label": "15",
          "position": 352.98125,
          "value": 15,
        },
        {
          "label": "20",
          "position": 311.825,
          "value": 20,
        },
        {
          "label": "25",
          "position": 270.66874999999993,
          "value": 25,
        },
        {
          "label": "30",
          "position": 229.5125,
          "value": 30,
        },
        {
          "label": "35",
          "position": 188.35625,
          "value": 35,
        },
        {
          "label": "40",
          "position": 147.2,
          "value": 40,
        },
      ],
      "titlePadding": undefined,
    },
  },
  "chrome": {
    "bottomAnchorY": 436.59999999999997,
    "bottomHeight": 43.4,
    "source": {
      "maxWidth": 755,
      "style": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
        "textAnchor": "start",
      },
      "text": "World Bank",
      "x": 20,
      "y": 8,
    },
    "subtitle": {
      "maxWidth": 755,
      "style": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": 1.45,
        "textAnchor": "start",
      },
      "text": "Four-country comparison",
      "x": 20,
      "y": 55.9,
    },
    "title": {
      "maxWidth": 755,
      "style": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 26,
        "fontWeight": 600,
        "lineHeight": 1.15,
        "textAnchor": "start",
      },
      "text": "GDP Growth",
      "x": 20,
      "y": 20,
    },
    "topHeight": 64.2,
  },
  "crosshair": true,
  "dimensions": {
    "height": 500,
    "width": 800,
  },
  "display": "full",
  "endpointLabels": {
    "bounds": {
      "height": 263.4,
      "width": 48.95985,
      "x": 727.04015,
      "y": 147.2,
    },
    "entries": [
      {
        "color": "#048398",
        "dataY": 147.2,
        "labelLines": [
          "US",
        ],
        "labelY": 147.2,
        "marker": {
          "dataX": 709.04015,
          "fill": "transparent",
          "radius": 4,
          "stroke": "#048398",
          "strokeWidth": 2,
          "x": 713.04015,
          "y": 147.2,
        },
        "seriesKey": "US",
        "showLeader": false,
        "value": "40",
      },
      {
        "color": "#cc8020",
        "dataY": 188.35625,
        "labelLines": [
          "UK",
        ],
        "labelY": 181.95,
        "marker": {
          "dataX": 709.04015,
          "fill": "transparent",
          "radius": 4,
          "stroke": "#cc8020",
          "strokeWidth": 2,
          "x": 713.04015,
          "y": 188.35625,
        },
        "seriesKey": "UK",
        "showLeader": false,
        "value": "35",
      },
      {
        "color": "#2c55a2",
        "dataY": 295.36249999999995,
        "labelLines": [
          "FR",
        ],
        "labelY": 288.86249999999995,
        "marker": {
          "dataX": 709.04015,
          "fill": "transparent",
          "radius": 4,
          "stroke": "#2c55a2",
          "strokeWidth": 2,
          "x": 713.04015,
          "y": 295.36249999999995,
        },
        "seriesKey": "FR",
        "showLeader": false,
        "value": "22",
      },
      {
        "color": "#85315f",
        "dataY": 245.975,
        "labelLines": [
          "DE",
        ],
        "labelY": 239.475,
        "marker": {
          "dataX": 709.04015,
          "fill": "transparent",
          "radius": 4,
          "stroke": "#85315f",
          "strokeWidth": 2,
          "x": 713.04015,
          "y": 245.975,
        },
        "seriesKey": "DE",
        "showLeader": false,
        "value": "28",
      },
    ],
    "gap": 8,
    "labelStyle": {
      "fill": "#09090b",
      "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "fontSize": 13,
      "fontWeight": 600,
      "lineHeight": 1.25,
    },
    "leading": undefined,
    "leadingBounds": undefined,
    "swatchChipFill": "rgba(0,0,0,0.04)",
    "swatchSize": 18,
    "valueGap": 4,
    "valueStyle": {
      "fill": "#71717a",
      "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "fontSize": 12,
      "fontVariant": "tabular-nums",
      "fontWeight": 400,
      "lineHeight": 1.25,
    },
  },
  "legend": {
    "bounds": {
      "height": 32,
      "width": 196.5,
      "x": 26,
      "y": 90.19999999999999,
    },
    "entries": [
      {
        "active": true,
        "color": "#048398",
        "label": "US",
        "shape": "line",
      },
      {
        "active": true,
        "color": "#cc8020",
        "label": "UK",
        "shape": "line",
      },
      {
        "active": true,
        "color": "#2c55a2",
        "label": "FR",
        "shape": "line",
      },
      {
        "active": true,
        "color": "#85315f",
        "label": "DE",
        "shape": "line",
      },
    ],
    "entryGap": 16,
    "entryPositions": [
      {
        "labelX": 44,
        "labelY": 96.19999999999999,
        "row": 0,
        "width": 49.278999999999996,
        "x": 26,
        "y": 90.19999999999999,
      },
      {
        "labelX": 93.279,
        "labelY": 96.19999999999999,
        "row": 0,
        "width": 49.278999999999996,
        "x": 75.279,
        "y": 90.19999999999999,
      },
      {
        "labelX": 142.558,
        "labelY": 96.19999999999999,
        "row": 0,
        "width": 48.663,
        "x": 124.55799999999999,
        "y": 90.19999999999999,
      },
      {
        "labelX": 191.221,
        "labelY": 96.19999999999999,
        "row": 0,
        "width": 49.278999999999996,
        "x": 173.221,
        "y": 90.19999999999999,
      },
    ],
    "labelStyle": {
      "fill": "#09090b",
      "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "fontSize": 11,
      "fontVariant": "tabular-nums",
      "fontWeight": 400,
      "lineHeight": 1.3,
    },
    "position": "top",
    "rowHeight": 16,
    "swatchChipFill": "rgba(0,0,0,0.04)",
    "swatchGap": 6,
    "swatchSize": 12,
    "type": "categorical",
  },
  "legends": [
    {
      "bounds": {
        "height": 32,
        "width": 196.5,
        "x": 26,
        "y": 90.19999999999999,
      },
      "entries": [
        {
          "active": true,
          "color": "#048398",
          "label": "US",
          "shape": "line",
        },
        {
          "active": true,
          "color": "#cc8020",
          "label": "UK",
          "shape": "line",
        },
        {
          "active": true,
          "color": "#2c55a2",
          "label": "FR",
          "shape": "line",
        },
        {
          "active": true,
          "color": "#85315f",
          "label": "DE",
          "shape": "line",
        },
      ],
      "entryGap": 16,
      "entryPositions": [
        {
          "labelX": 44,
          "labelY": 96.19999999999999,
          "row": 0,
          "width": 49.278999999999996,
          "x": 26,
          "y": 90.19999999999999,
        },
        {
          "labelX": 93.279,
          "labelY": 96.19999999999999,
          "row": 0,
          "width": 49.278999999999996,
          "x": 75.279,
          "y": 90.19999999999999,
        },
        {
          "labelX": 142.558,
          "labelY": 96.19999999999999,
          "row": 0,
          "width": 48.663,
          "x": 124.55799999999999,
          "y": 90.19999999999999,
        },
        {
          "labelX": 191.221,
          "labelY": 96.19999999999999,
          "row": 0,
          "width": 49.278999999999996,
          "x": 173.221,
          "y": 90.19999999999999,
        },
      ],
      "labelStyle": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.3,
      },
      "position": "top",
      "rowHeight": 16,
      "swatchChipFill": "rgba(0,0,0,0.04)",
      "swatchGap": 6,
      "swatchSize": 12,
      "type": "categorical",
    },
  ],
  "marks": [
    {
      "aria": {
        "label": "US: line with 2 data points",
      },
      "data": [
        {
          "country": "US",
          "date": "2020-01-01",
          "value": 10,
        },
        {
          "country": "US",
          "date": "2021-01-01",
          "value": 40,
        },
      ],
      "dataPoints": [
        {
          "datum": {
            "country": "US",
            "date": "2020-01-01",
            "value": 10,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#048398",
                "label": "country",
                "value": "US",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "10",
              },
            ],
            "title": "2020",
          },
          "x": 47,
          "y": 394.13749999999993,
        },
        {
          "datum": {
            "country": "US",
            "date": "2021-01-01",
            "value": 40,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#048398",
                "label": "country",
                "value": "US",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "40",
              },
            ],
            "title": "2021",
          },
          "x": 709.04015,
          "y": 147.2,
        },
      ],
      "interpolate": "monotone",
      "key": "US",
      "opacity": undefined,
      "path": "M47,394.137L709.04,147.2",
      "pointKeys": [
        "2020-01-01",
        "2021-01-01",
      ],
      "points": [
        {
          "x": 47,
          "y": 394.13749999999993,
        },
        {
          "x": 709.04015,
          "y": 147.2,
        },
      ],
      "seriesKey": "US",
      "stroke": "#048398",
      "strokeDasharray": undefined,
      "strokeWidth": 2,
      "type": "line",
    },
    {
      "aria": {
        "label": "UK: line with 2 data points",
      },
      "data": [
        {
          "country": "UK",
          "date": "2020-01-01",
          "value": 15,
        },
        {
          "country": "UK",
          "date": "2021-01-01",
          "value": 35,
        },
      ],
      "dataPoints": [
        {
          "datum": {
            "country": "UK",
            "date": "2020-01-01",
            "value": 15,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#cc8020",
                "label": "country",
                "value": "UK",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "15",
              },
            ],
            "title": "2020",
          },
          "x": 47,
          "y": 352.98125,
        },
        {
          "datum": {
            "country": "UK",
            "date": "2021-01-01",
            "value": 35,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#cc8020",
                "label": "country",
                "value": "UK",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "35",
              },
            ],
            "title": "2021",
          },
          "x": 709.04015,
          "y": 188.35625,
        },
      ],
      "interpolate": "monotone",
      "key": "UK",
      "opacity": undefined,
      "path": "M47,352.981L709.04,188.356",
      "pointKeys": [
        "2020-01-01",
        "2021-01-01",
      ],
      "points": [
        {
          "x": 47,
          "y": 352.98125,
        },
        {
          "x": 709.04015,
          "y": 188.35625,
        },
      ],
      "seriesKey": "UK",
      "stroke": "#cc8020",
      "strokeDasharray": undefined,
      "strokeWidth": 2,
      "type": "line",
    },
    {
      "aria": {
        "label": "FR: line with 2 data points",
      },
      "data": [
        {
          "country": "FR",
          "date": "2020-01-01",
          "value": 8,
        },
        {
          "country": "FR",
          "date": "2021-01-01",
          "value": 22,
        },
      ],
      "dataPoints": [
        {
          "datum": {
            "country": "FR",
            "date": "2020-01-01",
            "value": 8,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#2c55a2",
                "label": "country",
                "value": "FR",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "8",
              },
            ],
            "title": "2020",
          },
          "x": 47,
          "y": 410.59999999999997,
        },
        {
          "datum": {
            "country": "FR",
            "date": "2021-01-01",
            "value": 22,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#2c55a2",
                "label": "country",
                "value": "FR",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "22",
              },
            ],
            "title": "2021",
          },
          "x": 709.04015,
          "y": 295.36249999999995,
        },
      ],
      "interpolate": "monotone",
      "key": "FR",
      "opacity": undefined,
      "path": "M47,410.6L709.04,295.362",
      "pointKeys": [
        "2020-01-01",
        "2021-01-01",
      ],
      "points": [
        {
          "x": 47,
          "y": 410.59999999999997,
        },
        {
          "x": 709.04015,
          "y": 295.36249999999995,
        },
      ],
      "seriesKey": "FR",
      "stroke": "#2c55a2",
      "strokeDasharray": undefined,
      "strokeWidth": 2,
      "type": "line",
    },
    {
      "aria": {
        "label": "DE: line with 2 data points",
      },
      "data": [
        {
          "country": "DE",
          "date": "2020-01-01",
          "value": 12,
        },
        {
          "country": "DE",
          "date": "2021-01-01",
          "value": 28,
        },
      ],
      "dataPoints": [
        {
          "datum": {
            "country": "DE",
            "date": "2020-01-01",
            "value": 12,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#85315f",
                "label": "country",
                "value": "DE",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "12",
              },
            ],
            "title": "2020",
          },
          "x": 47,
          "y": 377.67499999999995,
        },
        {
          "datum": {
            "country": "DE",
            "date": "2021-01-01",
            "value": 28,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#85315f",
                "label": "country",
                "value": "DE",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "28",
              },
            ],
            "title": "2021",
          },
          "x": 709.04015,
          "y": 245.975,
        },
      ],
      "interpolate": "monotone",
      "key": "DE",
      "opacity": undefined,
      "path": "M47,377.675L709.04,245.975",
      "pointKeys": [
        "2020-01-01",
        "2021-01-01",
      ],
      "points": [
        {
          "x": 47,
          "y": 377.67499999999995,
        },
        {
          "x": 709.04015,
          "y": 245.975,
        },
      ],
      "seriesKey": "DE",
      "stroke": "#85315f",
      "strokeDasharray": undefined,
      "strokeWidth": 2,
      "type": "line",
    },
  ],
  "metrics": undefined,
  "theme": {
    "_tokenPairs": undefined,
    "borderRadius": 8,
    "chrome": {
      "byline": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "eyebrow": {
        "color": "#06b6d4",
        "fontSize": 11,
        "fontWeight": 500,
        "lineHeight": 1.4,
      },
      "footer": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "source": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "subtitle": {
        "color": "#71717a",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "title": {
        "color": "#09090b",
        "fontSize": 26,
        "fontWeight": 600,
        "lineHeight": 1.15,
      },
    },
    "colors": {
      "annotationFill": "rgba(0,0,0,0.04)",
      "annotationText": "#71717a",
      "axis": "#71717a",
      "background": "transparent",
      "categorical": [
        "#06b6d4",
        "#e29e47",
        "#4170cb",
        "#b2417f",
        "#3ca368",
        "#a584dc",
      ],
      "categoricalFill": [
        "#51bccc",
        "#dda96b",
        "#587fc8",
        "#bf6291",
        "#62ab7d",
        "#ae96da",
      ],
      "diverging": {
        "brownTeal": [
          "#8c510a",
          "#bf812d",
          "#dfc27d",
          "#f6e8c3",
          "#80cdc1",
          "#35978f",
          "#01665e",
        ],
        "redBlue": [
          "#b2182b",
          "#d6604d",
          "#f4a582",
          "#f7f7f7",
          "#92c5de",
          "#4393c3",
          "#2166ac",
        ],
      },
      "gridline": "rgba(0,0,0,0.08)",
      "hairline": "rgba(0,0,0,0.14)",
      "negative": "#dc2626",
      "neutral": {
        "100": "#f0f0f0",
        "200": "#e1e1e2",
        "300": "#c9c9c9",
        "400": "#9d9d9d",
        "600": "#787879",
        "800": "#474748",
        "border": "rgba(0, 0, 0, 0.08)",
        "faint": "#d4d4d8",
        "secondary": "#3f3f46",
        "surface": "#ffffff",
      },
      "positive": "#15803d",
      "sequential": {
        "blue": [
          "#deebf7",
          "#c6dbef",
          "#9ecae1",
          "#6baed6",
          "#3182bd",
          "#08519c",
        ],
        "green": [
          "#e5f5e0",
          "#c7e9c0",
          "#a1d99b",
          "#74c476",
          "#31a354",
          "#006d2c",
        ],
        "orange": [
          "#fee6ce",
          "#fdd0a2",
          "#fdae6b",
          "#fd8d3c",
          "#e6550d",
          "#a63603",
        ],
        "purple": [
          "#efedf5",
          "#dadaeb",
          "#bcbddc",
          "#9e9ac8",
          "#756bb1",
          "#54278f",
        ],
        "teal": [
          "#06b6d4",
          "#05a3be",
          "#0490a8",
          "#037d92",
          "#026a7c",
          "#015766",
          "#004450",
        ],
      },
      "text": "#09090b",
    },
    "fonts": {
      "family": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "mono": ""JetBrains Mono", "Fira Code", "Cascadia Code", monospace",
      "sizes": {
        "axisTick": 11,
        "body": 13,
        "metricLabel": 11,
        "metricValue": 22,
        "small": 11,
        "subtitle": 14,
        "title": 26,
      },
      "weights": {
        "bold": 700,
        "medium": 500,
        "normal": 400,
        "semibold": 600,
      },
    },
    "isDark": false,
    "rule": null,
    "seriesStrategy": "palette",
    "spacing": {
      "axisMargin": 6,
      "chartToFooter": 8,
      "chromeGap": 6,
      "chromeToChart": 8,
      "padding": 20,
      "xAxisHeight": 26,
      "xAxisLabelPadding": 4,
    },
  },
  "tooltipDescriptors": [],
  "watermark": false,
  "xInvert": {
    "bottomData": 1609459200000,
    "bottomPixel": 709.04015,
    "scaleType": "time",
    "topData": 1577836800000,
    "topPixel": 47,
  },
  "yInvert": {
    "bottomData": 40,
    "bottomPixel": 147.2,
    "scaleType": "linear",
    "topData": 8,
    "topPixel": 410.59999999999997,
  },
}
`;

exports[`compileChart snapshot (Step 7 oracle) > watermarked column chart with gradient fill 1`] = `
{
  "a11y": {
    "altText": "Bar chart showing Gradient Columns across 4 categories (4 data points)",
    "dataTableFallback": [
      [
        "category",
        "score",
      ],
      [
        "A",
        30,
      ],
      [
        "B",
        55,
      ],
      [
        "C",
        70,
      ],
      [
        "D",
        45,
      ],
    ],
    "keyboardNavigable": true,
    "role": "img",
  },
  "animation": undefined,
  "annotations": [],
  "area": {
    "height": 234.3,
    "width": 537.768,
    "x": 39.232,
    "y": 60.9,
  },
  "axes": {
    "x": {
      "domainLine": undefined,
      "end": {
        "x": 577,
        "y": 295.2,
      },
      "extent": 26,
      "gridlines": [],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 500,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 39.232,
        "y": 295.2,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": undefined,
      "tickPosition": "gutter",
      "ticks": [
        {
          "label": "A",
          "position": 118.31552941176471,
          "value": "A",
        },
        {
          "label": "B",
          "position": 244.84917647058825,
          "value": "B",
        },
        {
          "label": "C",
          "position": 371.3828235294118,
          "value": "C",
        },
        {
          "label": "D",
          "position": 497.91647058823537,
          "value": "D",
        },
      ],
      "titlePadding": undefined,
    },
    "y": {
      "domainLine": undefined,
      "end": {
        "x": 39.232,
        "y": 295.2,
      },
      "gridlines": [
        {
          "major": true,
          "position": 295.2,
        },
        {
          "major": true,
          "position": 261.72857142857146,
        },
        {
          "major": true,
          "position": 228.25714285714287,
        },
        {
          "major": true,
          "position": 194.78571428571428,
        },
        {
          "major": true,
          "position": 161.31428571428572,
        },
        {
          "major": true,
          "position": 127.84285714285714,
        },
        {
          "major": true,
          "position": 94.37142857142858,
        },
        {
          "major": true,
          "position": 60.9,
        },
      ],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 500,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 39.232,
        "y": 60.9,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": undefined,
      "tickPosition": "gutter",
      "ticks": [
        {
          "label": "0",
          "position": 295.2,
          "value": 0,
        },
        {
          "label": "10",
          "position": 261.72857142857146,
          "value": 10,
        },
        {
          "label": "20",
          "position": 228.25714285714287,
          "value": 20,
        },
        {
          "label": "30",
          "position": 194.78571428571428,
          "value": 30,
        },
        {
          "label": "40",
          "position": 161.31428571428572,
          "value": 40,
        },
        {
          "label": "50",
          "position": 127.84285714285714,
          "value": 50,
        },
        {
          "label": "60",
          "position": 94.37142857142858,
          "value": 60,
        },
        {
          "label": "70",
          "position": 60.9,
          "value": 70,
        },
      ],
      "titlePadding": undefined,
    },
  },
  "chrome": {
    "bottomAnchorY": 321.2,
    "bottomHeight": 61.8,
    "byline": {
      "maxWidth": 431,
      "style": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
        "textAnchor": "start",
      },
      "text": "By the engine",
      "x": 17,
      "y": 29.4,
    },
    "source": {
      "maxWidth": 431,
      "style": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
        "textAnchor": "start",
      },
      "text": "Test data",
      "x": 17,
      "y": 8,
    },
    "title": {
      "maxWidth": 561,
      "style": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 26,
        "fontWeight": 600,
        "lineHeight": 1.15,
        "textAnchor": "start",
      },
      "text": "Gradient Columns",
      "x": 17,
      "y": 17,
    },
    "topHeight": 37.9,
  },
  "crosshair": false,
  "dimensions": {
    "height": 400,
    "width": 600,
  },
  "display": "full",
  "legend": {
    "bounds": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "entries": [],
    "entryGap": 16,
    "labelStyle": {
      "fill": "#09090b",
      "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "fontSize": 11,
      "fontWeight": 400,
      "lineHeight": 1.3,
    },
    "position": "top",
    "swatchChipFill": "rgba(0,0,0,0.04)",
    "swatchGap": 6,
    "swatchSize": 12,
    "type": "categorical",
  },
  "legends": [
    {
      "bounds": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "entries": [],
      "entryGap": 16,
      "labelStyle": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.3,
      },
      "position": "top",
      "swatchChipFill": "rgba(0,0,0,0.04)",
      "swatchGap": 6,
      "swatchSize": 12,
      "type": "categorical",
    },
  ],
  "marks": [
    {
      "aria": {
        "label": "A: 30",
      },
      "cornerRadius": 2,
      "cornerRadiusSides": {
        "bl": false,
        "br": false,
        "tl": true,
        "tr": true,
      },
      "data": {
        "category": "A",
        "score": 30,
      },
      "fill": {
        "stops": [
          {
            "color": "#ff0000",
            "offset": 0,
          },
          {
            "color": "#0000ff",
            "offset": 1,
          },
        ],
        "type": "linear",
      },
      "height": 100.41428571428571,
      "key": "|A",
      "label": {
        "connector": undefined,
        "style": {
          "fill": "#0000ff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 10,
          "fontVariant": "tabular-nums",
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "middle",
        },
        "text": "30",
        "visible": true,
        "x": 118.31552941176471,
        "y": 182.78571428571428,
      },
      "orient": "vertical",
      "type": "rect",
      "width": 94.90023529411765,
      "x": 70.8654117647059,
      "y": 194.78571428571428,
    },
    {
      "aria": {
        "label": "B: 55",
      },
      "cornerRadius": 2,
      "cornerRadiusSides": {
        "bl": false,
        "br": false,
        "tl": true,
        "tr": true,
      },
      "data": {
        "category": "B",
        "score": 55,
      },
      "fill": {
        "stops": [
          {
            "color": "#ff0000",
            "offset": 0,
          },
          {
            "color": "#0000ff",
            "offset": 1,
          },
        ],
        "type": "linear",
      },
      "height": 184.09285714285713,
      "key": "|B",
      "label": {
        "connector": undefined,
        "style": {
          "fill": "#0000ff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 10,
          "fontVariant": "tabular-nums",
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "middle",
        },
        "text": "55",
        "visible": true,
        "x": 244.84917647058825,
        "y": 99.10714285714286,
      },
      "orient": "vertical",
      "type": "rect",
      "width": 94.90023529411765,
      "x": 197.39905882352943,
      "y": 111.10714285714286,
    },
    {
      "aria": {
        "label": "C: 70",
      },
      "cornerRadius": 2,
      "cornerRadiusSides": {
        "bl": false,
        "br": false,
        "tl": true,
        "tr": true,
      },
      "data": {
        "category": "C",
        "score": 70,
      },
      "fill": {
        "stops": [
          {
            "color": "#ff0000",
            "offset": 0,
          },
          {
            "color": "#0000ff",
            "offset": 1,
          },
        ],
        "type": "linear",
      },
      "height": 234.29999999999998,
      "key": "|C",
      "label": {
        "connector": undefined,
        "style": {
          "fill": "#0000ff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 10,
          "fontVariant": "tabular-nums",
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "middle",
        },
        "text": "70",
        "visible": true,
        "x": 371.3828235294118,
        "y": 48.9,
      },
      "orient": "vertical",
      "type": "rect",
      "width": 94.90023529411765,
      "x": 323.93270588235293,
      "y": 60.9,
    },
    {
      "aria": {
        "label": "D: 45",
      },
      "cornerRadius": 2,
      "cornerRadiusSides": {
        "bl": false,
        "br": false,
        "tl": true,
        "tr": true,
      },
      "data": {
        "category": "D",
        "score": 45,
      },
      "fill": {
        "stops": [
          {
            "color": "#ff0000",
            "offset": 0,
          },
          {
            "color": "#0000ff",
            "offset": 1,
          },
        ],
        "type": "linear",
      },
      "height": 150.62142857142857,
      "key": "|D",
      "label": {
        "connector": undefined,
        "style": {
          "fill": "#0000ff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 10,
          "fontVariant": "tabular-nums",
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "middle",
        },
        "text": "45",
        "visible": true,
        "x": 497.91647058823537,
        "y": 132.57857142857142,
      },
      "orient": "vertical",
      "type": "rect",
      "width": 94.90023529411765,
      "x": 450.4663529411765,
      "y": 144.57857142857142,
    },
  ],
  "metrics": undefined,
  "theme": {
    "_tokenPairs": undefined,
    "borderRadius": 8,
    "chrome": {
      "byline": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "eyebrow": {
        "color": "#06b6d4",
        "fontSize": 11,
        "fontWeight": 500,
        "lineHeight": 1.4,
      },
      "footer": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "source": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "subtitle": {
        "color": "#71717a",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "title": {
        "color": "#09090b",
        "fontSize": 26,
        "fontWeight": 600,
        "lineHeight": 1.15,
      },
    },
    "colors": {
      "annotationFill": "rgba(0,0,0,0.04)",
      "annotationText": "#71717a",
      "axis": "#71717a",
      "background": "transparent",
      "categorical": [
        "#06b6d4",
        "#e29e47",
        "#4170cb",
        "#b2417f",
        "#3ca368",
        "#a584dc",
      ],
      "categoricalFill": [
        "#51bccc",
        "#dda96b",
        "#587fc8",
        "#bf6291",
        "#62ab7d",
        "#ae96da",
      ],
      "diverging": {
        "brownTeal": [
          "#8c510a",
          "#bf812d",
          "#dfc27d",
          "#f6e8c3",
          "#80cdc1",
          "#35978f",
          "#01665e",
        ],
        "redBlue": [
          "#b2182b",
          "#d6604d",
          "#f4a582",
          "#f7f7f7",
          "#92c5de",
          "#4393c3",
          "#2166ac",
        ],
      },
      "gridline": "rgba(0,0,0,0.08)",
      "hairline": "rgba(0,0,0,0.14)",
      "negative": "#dc2626",
      "neutral": {
        "100": "#f0f0f0",
        "200": "#e1e1e2",
        "300": "#c9c9c9",
        "400": "#9d9d9d",
        "600": "#787879",
        "800": "#474748",
        "border": "rgba(0, 0, 0, 0.08)",
        "faint": "#d4d4d8",
        "secondary": "#3f3f46",
        "surface": "#ffffff",
      },
      "positive": "#15803d",
      "sequential": {
        "blue": [
          "#deebf7",
          "#c6dbef",
          "#9ecae1",
          "#6baed6",
          "#3182bd",
          "#08519c",
        ],
        "green": [
          "#e5f5e0",
          "#c7e9c0",
          "#a1d99b",
          "#74c476",
          "#31a354",
          "#006d2c",
        ],
        "orange": [
          "#fee6ce",
          "#fdd0a2",
          "#fdae6b",
          "#fd8d3c",
          "#e6550d",
          "#a63603",
        ],
        "purple": [
          "#efedf5",
          "#dadaeb",
          "#bcbddc",
          "#9e9ac8",
          "#756bb1",
          "#54278f",
        ],
        "teal": [
          "#06b6d4",
          "#05a3be",
          "#0490a8",
          "#037d92",
          "#026a7c",
          "#015766",
          "#004450",
        ],
      },
      "text": "#09090b",
    },
    "fonts": {
      "family": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "mono": ""JetBrains Mono", "Fira Code", "Cascadia Code", monospace",
      "sizes": {
        "axisTick": 11,
        "body": 13,
        "metricLabel": 11,
        "metricValue": 22,
        "small": 11,
        "subtitle": 14,
        "title": 26,
      },
      "weights": {
        "bold": 700,
        "medium": 500,
        "normal": 400,
        "semibold": 600,
      },
    },
    "isDark": false,
    "rule": null,
    "seriesStrategy": "palette",
    "spacing": {
      "axisMargin": 6,
      "chartToFooter": 8,
      "chromeGap": 6,
      "chromeToChart": 8,
      "padding": 20,
      "xAxisHeight": 26,
      "xAxisLabelPadding": 4,
    },
  },
  "tooltipDescriptors": [
    [
      "rect-0",
      {
        "fields": [
          {
            "color": "#0000ff",
            "label": "score",
            "value": "30",
          },
        ],
        "title": "A",
      },
    ],
    [
      "rect-1",
      {
        "fields": [
          {
            "color": "#0000ff",
            "label": "score",
            "value": "55",
          },
        ],
        "title": "B",
      },
    ],
    [
      "rect-2",
      {
        "fields": [
          {
            "color": "#0000ff",
            "label": "score",
            "value": "70",
          },
        ],
        "title": "C",
      },
    ],
    [
      "rect-3",
      {
        "fields": [
          {
            "color": "#0000ff",
            "label": "score",
            "value": "45",
          },
        ],
        "title": "D",
      },
    ],
  ],
  "watermark": true,
  "xInvert": {
    "bottomData": 0,
    "bottomPixel": 577,
    "domain": [
      "A",
      "B",
      "C",
      "D",
    ],
    "positions": [
      118.31552941176471,
      244.84917647058825,
      371.3828235294118,
      497.91647058823537,
    ],
    "topData": 0,
    "topPixel": 39.232,
  },
  "yInvert": {
    "bottomData": 70,
    "bottomPixel": 60.9,
    "scaleType": "linear",
    "topData": 0,
    "topPixel": 295.2,
  },
}
`;
